Fix broken CSS paths for image urls

--- a/jet/static/jet/css/_messages.scss
+++ b/jet/static/jet/css/_messages.scss
@@ -86,7 +86,7 @@ div.system-message p.system-message-title {
     padding: 4px 5px 4px 25px;
     margin: 0;
     color: #c11;
-    background: #ffefef url(../img/icon-no.svg) 5px 5px no-repeat;
+    background: #ffefef url("/admin/img/icon-no.svg") 5px 5px no-repeat;
 }
 
 .description {
